Fixed Bento and responsive on 1024 and 1440 and 2560 but gap between this bento and footer isnt fixed yet

--- a/CSS/homePage.css
+++ b/CSS/homePage.css
@@ -1,16 +1,18 @@
-
 body {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
     font-family: 'Salsa', cursive, sans-serif;
 }
-html, body {
+
+html,
+body {
     height: 100vh;
     margin: 0;
     padding: 0;
     scroll-behavior: smooth;
 }
+
 .mainContainer {
     position: relative;
     top: 0;
@@ -28,26 +30,23 @@ html, body {
 
 
 
-.mainContainer::-webkit-scrollbar-track
-{
-	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-	border-radius: 10px;
-	background-color: #F5F5F5;
-    
+.mainContainer::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+    background-color: #F5F5F5;
+
 }
 
-.mainContainer::-webkit-scrollbar
-{
-	width: 12px;
-	background-color: #F5F5F5;
+.mainContainer::-webkit-scrollbar {
+    width: 12px;
+    background-color: #F5F5F5;
     /* display: none; */
 }
 
-.mainContainer::-webkit-scrollbar-thumb
-{
-	border-radius: 10px;
-	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-	background-color: #D62929;
+.mainContainer::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+    background-color: #D62929;
 }
 
 
@@ -62,6 +61,7 @@ html, body {
     z-index: 100;
     background: transparent;
 }
+
 .navbar span {
     font-family: 'Source Code Pro', monospace;
     font-weight: 600;
@@ -71,9 +71,16 @@ html, body {
     letter-spacing: 1px;
     transition: color 0.2s;
 }
+
 .navbar span ion-icon {
     display: none;
 }
+
 .navbar span:hover {
     color: #c03a60;
+}
+
+#photoshopMockup.magicTile {
+    grid-column: span 3;
+
 }
